# curslet

./: .gitignore  curslet.cabal  example.hs  readme.markdown
UI/: Curslet.hs
UI/Curslet/: Attributes.hs  Class.hs  Monad.hs  Ncurses.hs
UI/Curslet/Bindings/: NCurses.hs
UI/Curslet/Bindings/NCurses/: Types.hsc
UI/Curslet/Ncurses/: Bindings.hs  Types.hsc
UI/Curslet/Ncurses/Internal/: Bindings.hs  Header.hsc
