Name: curslet
Author: startling
License: MIT
Version: 0.0.0
Description: High-level terminal ui library.
Cabal-Version: >= 1.2
Build-Type: Simple
Library
  exposed-modules:
      UI.Curslet.Class
    , UI.Curslet.Ncurses
  other-modules:
      UI.Curslet.Ncurses.Internal.Header
    , UI.Curslet.Ncurses.Internal.Bindings
  build-depends:
      base

Flag Report
  description: "Compile an executable that reports on your terminal."
  default: False
Executable curslet-report
  main-is: bin/curslet-report.hs
  if flag(report)
    buildable: True
  else
    buildable: False
  build-depends:
      base
    , mtl
  extra-libraries:
      ncurses

